added counter and adjusted visibility

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <title>Knock On Wood</title>
 </head>
 <body>
-    <h1>Click to Knock</h1>
-    <div class="graphic" style="position: absolute; top: 0; left: 0; display: none;"></div>
+    <div class="visible"></div>
+        <h1>Click to Knock</h1>
 
+    
+        <p><div id="knockCount"></div></p>
+    </div>
+        <div class="graphic" style="position: absolute; top: 0; left: 0; display: none;"></div>
+    
     <audio id="popSound" src="knock.mp3"></audio>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
     <script src="script.js"></script>
