fixed visibility issues

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Knock On Wood</title>
 </head>
 <body>
-    <div class="visible"></div>
+    <div class="background">
         <h1>Click to Knock</h1>
 
     
